src/task/registry/snapshots/mob_rs__task__registry__tests__match_pattern_all.snap
---
source: src/task/registry/tests.rs
expression: result
---
- cmake
- modorganizer
- modorganizer-archive
- modorganizer-plugins
- python
- usvfs
