src/task/registry/snapshots/mob_rs__task__registry__tests__test_resolve_full.snap
---
source: src/task/registry/tests.rs
expression: result
---
- modorganizer
- modorganizer-archive
- python
